@@ -1,3 +1,10 @@
+2000-06-04  Dave Peticolas  <dave@krondo.com>
+
+	* src/engine/util.c: add log level modification functions.
+
+	* src/scm/command-line.scm: add a --loglevel argument to set the
+	logging level.
+
 2000-06-04  Rob Browning  <rlb@cs.utexas.edu>
 
 	* */Makefile.am and others: fix up make dist to build a full-blown
